--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login form / sign up form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <section>
-            <div className="container">
-                {/* Sign in form */}
-                <div className="form sign-in-form">
-                    <div className="wrapper">
+            <div class="container">
+                <!-- {/* Sign in form */} -->
+                <div class="form sign-in-form">
+                    <div class="wrapper">
                         <form action="/">
                             <h1>Sign In</h1>
                             <p>Use your e-mail and password to sign in.</p>
@@ -24,9 +25,9 @@
                 </div>
 
 
-                {/* Sign up form */}
-                <div className="form sign-up-form">
-                    <div className="wrapper">
+                <!-- {/* Sign up form */} -->
+                <div class="form sign-up-form">
+                    <div class="wrapper">
                         <form action="/">
                             <h1>Sign up</h1>
                             <p>Please, provide all the correct info to create an account.</p>
@@ -40,16 +41,16 @@
 
 
 
-                {/* Overlay Container */}
-                <div className="overlay-container">
-                    <div className="overlay">
-                        <div className="overlay-left">
+                <!-- {/* Overlay Container */} -->
+                <div class="overlay-container">
+                    <div class="overlay">
+                        <div class="overlay-left">
                             <h1>Create Account</h1>
                             <p>Or</p>
                             <button id="signInButton">Log In</button>
                         </div>
 
-                        <div className="overlay-right">
+                        <div class="overlay-right">
                             <h1>Please, Log In</h1>
                             <p>Or</p>
                             <button id="signUpButton">Create Account</button>
@@ -59,5 +60,6 @@
             </div>
         </section>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
