--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
                 <!-- {/* Sign up form */} -->
-                <div class="form sign-up-form">
+                <div class="form sign-up-form active">
                     <div class="wrapper">
                         <form action="/">
                             <h1>Sign up</h1>
